Update 't0nksp7py-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:2fc73578c2f7fe733a406ed55d50a9b8c6fa5c94@sha256:dcc1944ed5d216c1a6bdcd45778a4bb29be52efe80880a20e09ac6dbfe1f3913

--- a/components/t0nksp7py-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/t0nksp7py-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t0nksp7py-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:2fc73578c2f7fe733a406ed55d50a9b8c6fa5c94@sha256:dcc1944ed5d216c1a6bdcd45778a4bb29be52efe80880a20e09ac6dbfe1f3913
+          name: container-image
